--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "netlify-cli": "^11.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
